# sia

./: .gitignore  FEATURES.md  GITHUB_SETUP.md  INSTALL.md  INSTALLATION.md  PLAN.md  README.md  STOP.md  UNDERSTANDING.md  aws.md  continuation.md  idea.md  pyproject.toml  run.md
backend/: main.py  pyproject.toml  requirements.txt
backend/models/: __init__.py  agent.py  responses.py  work_unit.py
backend/registry/: work_unit_registry.py
backend/routes/: __init__.py  work_units.py
backend/src/sia/: __init__.py  cli.py  hooks.py  main.py  mcp.py  models.py  registry.py
backend/src/sia/static/: index.html
backend/src/sia/static/assets/: index-BvEQYHTU.js  index-Cg2elGW5.css  index-D0n1yaAX.js  index-DY1icFmA.js  index-DihX6-Wl.js  index-OBdbtwae.css  index-WdXkSijJ.css  index-aqXEkj1O.css
cli/: __init__.py
frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.css  App.jsx  App.tsx  index.css
hooks/: post_tool_telemetry.py
old/: QUICK_TEST.md  README.md  TEST_INSTALLATION.md  idea.md  pyproject.toml
old/backend/: __init__.py
old/backend/registry/: __init__.py
old/backend/routes/: agents.py
old/cli/: main.py
old/frontend/: index.html
old/hooks/: __init__.py  pre_tool_guard.py
old/planning/: 01-work-units_guide.md  feature-completion-analysis.md  frontend-completion-plan.md
planning/: 01-work-units.md  pip-install-implementation-summary.md  source-vs-pip-comparison.md
