[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sia-claude"
version = "0.1.0"
description = "Work Unit Coordination for Claude Code multi-agent workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Sia Team"}
]
keywords = ["claude", "ai", "agents", "coordination", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
]

[project.scripts]
sia = "cli.main:main"

[project.urls]
Homepage = "https://github.com/yourorg/sia"
Documentation = "https://github.com/yourorg/sia#readme"
Repository = "https://github.com/yourorg/sia"

[tool.setuptools.packages.find]
include = ["backend*", "cli*", "hooks*"]

[tool.setuptools.package-data]
hooks = ["*.py"]
backend = ["*.py"]
cli = ["*.py"]
